# cmdj

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  paths.rs  player.rs  playlists.rs  terminate.rs
