[package]
name = "cmdj"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
home = "0.5.9"
indexmap = { version = "2.6.0", features = ["serde"] }
rodio = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.131", features = ["preserve_order"] }
